--- a/index.html
+++ b/index.html
@@ -1,10 +1,86 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first website</title>
+    <title>Rainy Days | Homepage</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
+    <header>
+      <nav>
+        <a href="index.html"><img src="images/Brand/RainyDays_Logo.png" alt="The Company Logo">
+        </a>
+      </nav>
+    </header>
+    <h1>Pushing the Comfort Zone</h1>
+    <p>
+      We at RAINYDAYS take great pride in what we do. <br>
+      We know that our costumers need comfort and furability,<br>
+      that suits their adventurous lifestyles.<br>
+      We do not want your exploration to be hindered by broken gear.<br>
+    </p>
+    <a href="#" class="learn-more">Click here to learn more...</a>
+    <section class="jacket-slider">
+      <img
+        src="images/Jackets/RainyDays_Jacket3.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+      <img
+        src="images/Jackets/RainyDays_Jacket4.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+      <img
+        src="images/Jackets/RainyDays_Jacket6.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+      <img
+        src="images/Jackets/RainyDays_Jacket1.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+      <img
+        src="images/Jackets/RainyDays_Jacket5.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+      <img
+        src="images/Jackets/RainyDays_Jacket2.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+      <img
+        src="images/Jackets/RainyDays_Jacket7.png"
+        class="slider-products"
+        alt="A picture of a jacket"
+      />
+    </section>
+    <section class="Instagram-feed">
+      <div class="feed-left-and-right-img"></div>
+      <div class="feed-center-img"></div>
+    </section>
+    <footer>
+      <img src="images/Brand/RainyDays_Logo.png" alt="The Company Logo">
+      <section class="footer-col1">
+      <h2>For Your Knowledge</h2>
+      <a href="#">FAQ</a>
+      <a href="#">Products</a>
+      <a href="#">#RAINYDAYS</a>
+      <a href="#">Contact</a>
+    </section>
+    <section class="footer-col2">
+      <h2>What We Do</h2>
+      <a href="#">About us</a>
+      <a href="#">Careers</a>
+      <a href="#">Sustainability</a>
+    </section>
+
+    <section class="footer-socialmedia">
+      <a href="www.instagram.com" class="footer-socialmedia-icons"><img src="images/icons/instagram.png" alt="Instagram Icon"></a>
+      <a href="www.facebook.com" class="footer-socialmedia-icons"><img src="images/icons/facebook.png" alt="Facebook Icon"></a>
+      <a href="www.twitter.com" class="footer-socialmedia-icons"><img src="images/icons/twitter.png" alt="Twitter Icon"></a>
+      <a href="www.youtube.com" class="footer-socialmedia-icons"><img src="images/icons/youtube.png" alt="YouTube Icon"></a>
+    </section>
+    </footer>
   </body>
 </html>
