--- a/index.html
+++ b/index.html
@@ -1,86 +1,150 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Rainy Days | Homepage</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/54814e5974.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>RAINYDAYS | Homepage</title>
   </head>
-    <header>
-      <nav>
-        <a href="index.html"><img src="images/Brand/RainyDays_Logo.png" alt="The Company Logo">
-        </a>
+  <body>
+    <header class="header">
+      <a class="nav-logo" href="index.html"
+        ><img
+          class="logo"
+          src="images/Brand/RainyDays_Logo.png"
+          alt="The company logo"
+      /></a>
+
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">Jackets</a></li>
+          <li><a class="main-nav-link" href="#">About us</a></li>
+          <li><a class="main-nav-link" href="#">Contact</a></li>
+          <a href="#" class="shoppingcart-nav">
+            <i class="fa-solid fa-cart-shopping fa-3x"></i>
+          </a>
+        </ul>
       </nav>
     </header>
-    <h1>Pushing the Comfort Zone</h1>
-    <p>
-      We at RAINYDAYS take great pride in what we do. <br>
-      We know that our costumers need comfort and furability,<br>
-      that suits their adventurous lifestyles.<br>
-      We do not want your exploration to be hindered by broken gear.<br>
-    </p>
-    <a href="#" class="learn-more">Click here to learn more...</a>
-    <section class="jacket-slider">
-      <img
-        src="images/Jackets/RainyDays_Jacket3.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-      <img
-        src="images/Jackets/RainyDays_Jacket4.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-      <img
-        src="images/Jackets/RainyDays_Jacket6.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-      <img
-        src="images/Jackets/RainyDays_Jacket1.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-      <img
-        src="images/Jackets/RainyDays_Jacket5.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-      <img
-        src="images/Jackets/RainyDays_Jacket2.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-      <img
-        src="images/Jackets/RainyDays_Jacket7.png"
-        class="slider-products"
-        alt="A picture of a jacket"
-      />
-    </section>
-    <section class="Instagram-feed">
-      <div class="feed-left-and-right-img"></div>
-      <div class="feed-center-img"></div>
-    </section>
-    <footer>
-      <img src="images/Brand/RainyDays_Logo.png" alt="The Company Logo">
-      <section class="footer-col1">
-      <h2>For Your Knowledge</h2>
-      <a href="#">FAQ</a>
-      <a href="#">Products</a>
-      <a href="#">#RAINYDAYS</a>
-      <a href="#">Contact</a>
-    </section>
-    <section class="footer-col2">
-      <h2>What We Do</h2>
-      <a href="#">About us</a>
-      <a href="#">Careers</a>
-      <a href="#">Sustainability</a>
-    </section>
+    <main>
+      <section class="section-hero">
+        <p class="scroll-down">
+          Scroll Down <i class="fa-solid fa-angle-down"></i>
+        </p>
+      </section>
 
-    <section class="footer-socialmedia">
-      <a href="www.instagram.com" class="footer-socialmedia-icons"><img src="images/icons/instagram.png" alt="Instagram Icon"></a>
-      <a href="www.facebook.com" class="footer-socialmedia-icons"><img src="images/icons/facebook.png" alt="Facebook Icon"></a>
-      <a href="www.twitter.com" class="footer-socialmedia-icons"><img src="images/icons/twitter.png" alt="Twitter Icon"></a>
-      <a href="www.youtube.com" class="footer-socialmedia-icons"><img src="images/icons/youtube.png" alt="YouTube Icon"></a>
-    </section>
+      <!--about us-->
+      <div class="container grid grid--2--cols grid--center-v">
+        <div class="about-us-text">
+          <h2 class="about-header">Pushing the Comfort Zone</h2>
+          <p>
+            We at <strong>RAINYDAYS</strong> take great pride in what we do.
+          </p>
+          <p>We know that out costumers need comfort and durability,</p>
+          <p>tha suits their adventurous lifestyles.</p>
+          <p>We do not want your exploration to be hindered by broken gear</p>
+          <a href="#" class="learn-more-link">Click here to learn more...</a>
+        </div>
+
+        <!--Product placement-->
+        <div class="product-list container grid grid--3--cols grid--center-v">
+          <div class="product">
+          <img
+            class="product-img"
+            src="images/jackets/RainyDays_Jacket3.png"
+            alt="a picture of a jacket"
+          />
+          <p class="jacket-name"> <strong>Scott Windy</strong></p>
+          <p class="jacket-price"> <strong>$98</strong></p>
+          </div>
+          <div class="product">
+            <img
+              class="product-img"
+              src="images/jackets/RainyDays_Jacket3.png"
+              alt="a picture of a jacket"
+            />
+            <p class="jacket-name"> <strong>Scott Windy</strong></p>
+            <p class="jacket-price"> <strong>$98</strong></p>
+            </div>
+          <div class="product">
+          <img
+            class="product-img"
+            src="images/jackets/RainyDays_Jacket3.png"
+            alt="a picture of a jacket"
+          />
+          <p class="jacket-name"> <strong>Scott Windy</strong></p>
+          <p class="jacket-price"> <strong>$98</strong></p>
+          </div>
+        </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img
+              class="footer-logo"
+              alt="company logo"
+              src="images/brand/RainyDays_Logo.png"
+            />
+          </a>
+
+          <p class="copyright">
+            Copyright &copy; 2027 by RAINYDAYS, Inc. All rights reserved.
+          </p>
+        </div>
+        <nav class="nav-col">
+          <ul class="footer-nav">
+            <li><p class="footer-heading">Knowledge</p></li>
+            <li><a class="footer-link" href="#">FAQ</a></li>
+            <li><a class="footer-link" href="#">Products</a></li>
+            <li><a class="footer-link" href="#">#RAINYDAYS</a></li>
+            <li><a class="footer-link" href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+        <nav class="nav-col">
+          <ul class="footer-nav">
+            <li><p class="footer-heading">What We Do</p></li>
+            <li><a class="footer-link" href="#">About Us</a></li>
+            <li><a class="footer-link" href="#">Sustainability</a></li>
+            <li><a class="footer-link" href="#">News</a></li>
+          </ul>
+        </nav>
+
+        <ul class="social-links">
+          <li>
+            <a
+              class="footer-link instagram"
+              href="www.instagram.com"
+              target="”_blank”"
+              ><i class="fa-brands fa-instagram fa-3x"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              class="footer-link facebook"
+              href="wwwe.facebook.com"
+              target="”_blank”"
+              ><i class="fa-brands fa-facebook-f fa-3x"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              class="footer-link twitter"
+              href="www.twitter.com"
+              target="”_blank”"
+              ><i class="fa-brands fa-twitter fa-3x"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
