--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
 
       <!--about us-->
-      <div class="container grid grid--2--cols grid--center-v">
+      <div class="about us ">
         <div class="about-us-text">
           <h2 class="about-header">Pushing the Comfort Zone</h2>
           <p>
@@ -53,7 +53,7 @@
         </div>
 
         <!--Product placement-->
-        <div class="product-list container grid grid--3--cols grid--center-v">
+        <div class="product-list">
           <div class="product">
           <img
             class="product-img"
@@ -82,7 +82,22 @@
           <p class="jacket-price"> <strong>$98</strong></p>
           </div>
         </div>
+
+
+
+        <section class="instagram-feed">
+          <img src="images/rainydays_instagram.png" alt="a group of pictures from the instagram feed">
+        </section>
+
     </main>
+
+
+    
+
+
+
+    <!----------------- FOOTER ------------------>
+
 
     <footer class="footer">
       <div class="container grid grid--footer">
