--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
 
       <!--about us-->
-      <div class="about-us">
+      <div class="container grid grid--2--cols grid--center-v">
         <div class="about-us-text">
           <h2 class="about-header">Pushing the Comfort Zone</h2>
           <p>
@@ -52,16 +52,18 @@
           <a href="#" class="learn-more-link">Click here to learn more...</a>
         </div>
 
+
+
         <!--Product placement-->
-        <div class="product-list">
+        <div class="product-list grid grid--3--cols grid--center-v">
           <div class="product">
-            <img
-              class="product-img"
-              src="images/jackets/RainyDays_Jacket3.png"
-              alt="a picture of a jacket"
-            />
-            <p class="jacket-name"><strong>Scott Windy</strong></p>
-            <p class="jacket-price"><strong>$98</strong></p>
+          <img
+            class="product-img"
+            src="images/jackets/RainyDays_Jacket3.png"
+            alt="a picture of a jacket"
+          />
+          <p class="jacket-name">Scott Windy</p>
+          <p class="jacket-price">$98</p>
           </div>
           <div class="product">
             <img
@@ -69,30 +71,20 @@
               src="images/jackets/RainyDays_Jacket3.png"
               alt="a picture of a jacket"
             />
-            <p class="jacket-name"><strong>Scott Windy</strong></p>
-            <p class="jacket-price"><strong>$98</strong></p>
+            <p class="jacket-name">Scott Windy</p>
+            <p class="jacket-price">$98</p>
           </div>
           <div class="product">
-            <img
-              class="product-img"
-              src="images/jackets/RainyDays_Jacket3.png"
-              alt="a picture of a jacket"
-            />
-            <p class="jacket-name"><strong>Scott Windy</strong></p>
-            <p class="jacket-price"><strong>$98</strong></p>
+          <img
+            class="product-img"
+            src="images/jackets/RainyDays_Jacket3.png"
+            alt="a picture of a jacket"
+          />
+          <p class="jacket-name">Scott Windy</p>
+          <p class="jacket-price">$98</p>
           </div>
-        </div>
-      </div>
-
-      <section class="instagram-feed">
-        <img
-          src="images/rainydays_instagram.png"
-          alt="a group of pictures from the instagram feed"
-        />
-      </section>
+       </div>
     </main>
-
-    <!----------------- FOOTER ------------------>
 
     <footer class="footer">
       <div class="container grid grid--footer">
