--- a/index.html
+++ b/index.html
@@ -52,38 +52,49 @@
           <a href="#" class="learn-more-link">Click here to learn more...</a>
         </div>
 
-
-
         <!--Product placement-->
-        <div class="product-list grid grid--3--cols grid--center-v">
-          <div class="product">
-          <img
-            class="product-img"
-            src="images/jackets/RainyDays_Jacket3.png"
-            alt="a picture of a jacket"
-          />
-          <p class="jacket-name">Scott Windy</p>
-          <p class="jacket-price">$98</p>
-          </div>
+        <div class="product-list">
           <div class="product">
             <img
               class="product-img"
               src="images/jackets/RainyDays_Jacket3.png"
               alt="a picture of a jacket"
             />
-            <p class="jacket-name">Scott Windy</p>
-            <p class="jacket-price">$98</p>
+            <p class="jacket-name"><strong>Scott Windy XP</strong></p>
+            <p class="jacket-price"><strong>$98</strong></p>
           </div>
           <div class="product">
-          <img
-            class="product-img"
-            src="images/jackets/RainyDays_Jacket3.png"
-            alt="a picture of a jacket"
-          />
-          <p class="jacket-name">Scott Windy</p>
-          <p class="jacket-price">$98</p>
+            <img
+              class="product-img"
+              src="images/jackets/RainyDays_Jacket4.png"
+              alt="a picture of a jacket"
+            />
+            <p class="jacket-name"><strong>Scott Icy XP</strong></p>
+            <p class="jacket-price"><strong>$98</strong></p>
           </div>
-       </div>
+          <div class="product">
+            <img
+              class="product-img"
+              src="images/jackets/RainyDays_Jacket6.png"
+              alt="a picture of a jacket"
+            />
+            <p class="jacket-name"><strong>Scott Sailor XP</strong></p>
+            <p class="jacket-price"><strong>$98</strong></p>
+          </div>
+        </div>
+      </div>
+
+      <section class="instagram-feed">
+        <img
+          src="images/rainydays_instagram.png"
+          alt="a group of pictures from instagram"
+        />
+      </section>
+
+      <section class="email-input">
+        <td>Enter Email to subscribe to our news letter</td>
+        <input type="email" name="email" placeholder="example@mail.com" />
+      </section>
     </main>
 
     <footer class="footer">
@@ -125,7 +136,7 @@
             <a
               class="footer-link instagram"
               href="www.instagram.com"
-              target="”_blank”"
+              target="_blank"
               ><i class="fa-brands fa-instagram fa-3x"></i
             ></a>
           </li>
@@ -133,7 +144,7 @@
             <a
               class="footer-link facebook"
               href="wwwe.facebook.com"
-              target="”_blank”"
+              target="_blank"
               ><i class="fa-brands fa-facebook-f fa-3x"></i
             ></a>
           </li>
@@ -141,7 +152,7 @@
             <a
               class="footer-link twitter"
               href="www.twitter.com"
-              target="”_blank”"
+              target="_blank"
               ><i class="fa-brands fa-twitter fa-3x"></i
             ></a>
           </li>
