--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <li>
             <a
               class="footer-link facebook"
-              href="wwwe.facebook.com"
+              href="https://www.facebook.com"
               target="_blank"
               ><i class="fa-brands fa-facebook-f fa-3x"></i
             ></a>
