--- a/index.html
+++ b/index.html
@@ -2,162 +2,139 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/54814e5974.js"
-      crossorigin="anonymous"
-    ></script>
-
-    <title>RAINYDAYS | Homepage</title>
+    <meta name="description" content="RainyDays provides high quality jackets for your adventures" />
+    <title>RainyDays | Home</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/54814e5974.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header class="header">
-      <a class="nav-logo" href="index.html"
-        ><img
-          class="logo"
-          src="images/Brand/RainyDays_Logo.png"
-          alt="The company logo"
-      /></a>
-
-      <nav class="main-nav">
+    <header>
+      <a href="index.html" class="header-logo"><img class="header-logo" alt="company logo" src="images/brand/RainyDays_Logo_notext.png"/></a>
+      <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="hamburger-menu" />
+      <nav>
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Jackets</a></li>
-          <li><a class="main-nav-link" href="#">About us</a></li>
-          <li><a class="main-nav-link" href="#">Contact</a></li>
-          <a href="#" class="shoppingcart-nav">
-            <i class="fa-solid fa-cart-shopping fa-3x"></i>
-          </a>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="jackets.html">Jackets</a></li>
+          <li><a href="about_us.html">About Us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="checkout.html" class="cart" ><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="section-hero">
-        <p class="scroll-down">
-          Scroll Down <i class="fa-solid fa-angle-down"></i>
-        </p>
+        <div class="section-hero-content">
+          <h1>RAINYDAYS Jackets</h1>
+          <a href="jackets.html" class="cta cta-large cta-hero">View Jackets</a>  
+        </div>
       </section>
 
-      <!--about us-->
-      <div class="container grid grid--2--cols grid--center-v">
-        <div class="about-us-text">
-          <h2 class="about-header">Pushing the Comfort Zone</h2>
-          <p>
-            We at <strong>RAINYDAYS</strong> take great pride in what we do.
-          </p>
-          <p>We know that out costumers need comfort and durability,</p>
-          <p>tha suits their adventurous lifestyles.</p>
-          <p>We do not want your exploration to be hindered by broken gear</p>
-          <a href="#" class="learn-more-link">Click here to learn more...</a>
+
+      <!--------------------------------- about us --------------------------------->
+
+      <section class="about-us">
+        <div class="about-us-text_index">
+          <h1 class="about-header_index">Pushing the Comfort Zone</h1>
+          <p>We at <strong>RAINYDAYS</strong> take great pride in what we do.<br>
+          We know that out costumers need comfort and durability,<br>
+          that suits their adventurous lifestyles.<br>
+          We do not want your exploration to be hindered by broken gear.</p>
+          <a href="about_us.html" class="learn-more-link">Click here to learn more...</a>
         </div>
 
-        <!--Product placement-->
-        <div class="product-list">
-          <div class="product">
-            <img
-              class="product-img"
-              src="images/jackets/RainyDays_Jacket3.png"
-              alt="a picture of a jacket"
-            />
-            <p class="jacket-name"><strong>Scott Windy XP</strong></p>
-            <p class="jacket-price"><strong>$98</strong></p>
-          </div>
-          <div class="product">
-            <img
-              class="product-img"
-              src="images/jackets/RainyDays_Jacket4.png"
-              alt="a picture of a jacket"
-            />
-            <p class="jacket-name"><strong>Scott Icy XP</strong></p>
-            <p class="jacket-price"><strong>$98</strong></p>
-          </div>
-          <div class="product">
-            <img
-              class="product-img"
-              src="images/jackets/RainyDays_Jacket6.png"
-              alt="a picture of a jacket"
-            />
-            <p class="jacket-name"><strong>Scott Sailor XP</strong></p>
-            <p class="jacket-price"><strong>$98</strong></p>
-          </div>
-        </div>
-      </div>
 
-      <section class="instagram-feed">
-        <img
-          src="images/rainydays_instagram.png"
-          alt="a group of pictures from instagram"
-        />
+      <!-------------------------------- Featured -------------------------------->
+
+        <div>
+          <section class="featured">
+            <div class="products">
+              <img src="images/jackets/Scott_Windy_XP.png" alt="Scott Windy XP" class="featured-jacket"/>
+              <p>Scott Windy XP</br>
+              $500</p>
+              <a href="/products/scott_windy.html" class="cta cta-small">View</a>
+            </div>
+            <div class="products">
+              <img src="images/jackets/Scott_Sailor_XP.png" alt="Scott Sailor XP" class="featured-jacket jacket-4" />
+              <p>Scott Sailor XP</br>
+                $500</p>
+              <a href="/products/scott_sailor.html" class="cta cta-small">View</a>
+            </div>
+            <div class="products">
+              <img src="images/jackets/Scott_icy_XP.png" alt="Scott Icy XP" class="featured-jacket" />
+              <p>Scott Icy XP</br>
+                $400</p>
+              <a href="/products/scott_icy.html" class="cta cta-sale cta-small">On Sale</a>
+            </div>
+          </section>
+        </div>
       </section>
 
-      <section class="email-input">
-        <td>Enter Email to subscribe to our news letter</td>
-        <input type="email" name="email" placeholder="example@mail.com" />
+
+
+       <!-------------------------------- Instagram & Email -------------------------------->
+
+      <a href=""></a>
+      <section class="instagram-email">
+        <div>
+          <h2>Instagram</h2>
+          <p>Join our instagram competition by using #RAINYDAYS <br>
+            on a picture were you are wearing one of our jackets</p>
+        </div>
+        <div class="instagram-grid">
+          <a href="https://www.instagram.com/p/ChSXPKcoPut/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/andy-kogl-LkF3du9aMDs-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSYJr7Iuaf/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/jan-valecka-g_dw3gWWtQA-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSYS5NIxLC/?utm_source=ig_web_copy_link" class="instagram-grid-col-2 instagram-grid-row-2"  target=”_blank”><img src="images/instagram/jonathan-cooper-5r4p54SO2HY-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSXzRWIBB2/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/joe-yates-9Vg_qsd7DyQ-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSXomqIvGL/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/luke-stackpoole-EcFBaiH8V6Q-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSXedXIvcW/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/gage-walker-6LT0b6LmCt4-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSX7w-IPMu/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/eugene-chystiakov-3pyGTo9KVCs-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSYDREovDt/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/karsten-winegeart-jVT8vo04UT0-unsplash.jpg" alt="Picture from instagram feed"></a>
+          <a href="https://www.instagram.com/p/ChSXWhQIQ_f/?utm_source=ig_web_copy_link" target=”_blank”><img class="insta" src="images/instagram/andy-kogl-uhaYQSVCjo0-unsplash.jpg" alt="Picture from instagram feed"></a>
+        </div>
+        <div class="email-input">
+          <form action="">
+            <label for="email">Enter Email to subscribe to our news letter</label>
+            <input type="email" id="email" name="email" placeholder="john.smith@mail.com"/>
+            <input type="submit" value="Send Now" class="cta cta-email cta-small" />
+          </form>
+        </div>  
       </section>
     </main>
 
+
+
+    <!-------------------------------- Footer -------------------------------->
+
     <footer class="footer">
-      <div class="container grid grid--footer">
+      <section class="footer-grid">
         <div class="logo-col">
-          <a href="#" class="footer-logo">
-            <img
-              class="footer-logo"
-              alt="company logo"
-              src="images/brand/RainyDays_Logo.png"
-            />
-          </a>
-
-          <p class="copyright">
-            Copyright &copy; 2027 by RAINYDAYS, Inc. All rights reserved.
-          </p>
+          <a href="index.html" class="footer-logo"><img class="footer-logo" alt="company logo" src="images/brand/RainyDays_Logo.png"/></a>
         </div>
-        <nav class="nav-col">
+        <nav>
           <ul class="footer-nav">
-            <li><p class="footer-heading">Knowledge</p></li>
-            <li><a class="footer-link" href="#">FAQ</a></li>
-            <li><a class="footer-link" href="#">Products</a></li>
-            <li><a class="footer-link" href="#">#RAINYDAYS</a></li>
-            <li><a class="footer-link" href="#">Contact</a></li>
-          </ul>
+            <li class="footer-header"><h2>RAINYDAYS</h2></li>
+            <li class="footer-link"><a href="jackets.html">Jacket</a></li>
+            <li class="footer-link"><a class="footer-link" href="https://www.instagram.com/rainy_days_1985/" target="_blank">#RAINYDAYS</a></li>
+            <li class="footer-link"><a href="about_us.html">About Us</a></li>
+            <li class="footer-link"><a href="contact.html">Contact</a></li>
+          </ul>  
         </nav>
 
-        <nav class="nav-col">
-          <ul class="footer-nav">
-            <li><p class="footer-heading">What We Do</p></li>
-            <li><a class="footer-link" href="#">About Us</a></li>
-            <li><a class="footer-link" href="#">Sustainability</a></li>
-            <li><a class="footer-link" href="#">News</a></li>
-          </ul>
-        </nav>
-
-        <ul class="social-links">
-          <li>
-            <a
-              class="footer-link instagram"
-              href="www.instagram.com"
-              target="_blank"
-              ><i class="fa-brands fa-instagram fa-3x"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              class="footer-link facebook"
-              href="https://www.facebook.com"
-              target="_blank"
-              ><i class="fa-brands fa-facebook-f fa-3x"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              class="footer-link twitter"
-              href="www.twitter.com"
-              target="_blank"
-              ><i class="fa-brands fa-twitter fa-3x"></i
-            ></a>
-          </li>
+        <ul class="footer-social">
+          <li class="footer-header"><h2>Social Media</h2></li>
+          <li class="footer-link"><a class="footer-link instagram" href="https://www.instagram.com/rainy_days_1985/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+          <li class="footer-link"><a class="footer-link facebook" href="https://www.facebook.com/hashtag/rainydays" target="_blank"><i class="fa-brands fa-facebook-f fa-2x"></i></a></li>
+          <li class="footer-link"><a class="footer-link twitter" href="https://twitter.com/search?q=%23rainydays&src=typed_query&f=image" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a></li>
         </ul>
-      </div>
+      </section>
+
+      <p class="copyright">Copyright &copy; 2027 by RAINYDAYS, Inc. All rights reserved.</p>
     </footer>
   </body>
 </html>
